# logic

./: .gitignore  .gitmodules  Cargo.toml  README.md  _scripto.sh  build-for-web.sh  build-lambda.sh  build-wasm.sh  build-web-langs.sh
.cargo/: config
.github/workflows/: build.yml
.semaphore/: semaphore.yml
cli/: Cargo.toml  robot.py  stdlib.py
cli/src/: main.rs
env-runners/browser/: Cargo.toml
env-runners/browser/src/: lib.rs
env-runners/lambda/: Cargo.toml  deploy.sh  prepare-test-payload.py
env-runners/lambda-cache/: Cargo.toml
env-runners/lambda-cache/src/: main.rs
env-runners/lambda/build-cache/: Cargo.toml
env-runners/lambda/build-cache/src/: main.rs
env-runners/lambda/src/: main.rs
env-runners/native/: Cargo.toml
env-runners/native/src/: lib.rs
lang-runners/: lang-common.h  lang-common.rs
lang-runners/javascript/: .gitignore  Makefile  jsrunner.c  package.json  stdlib.js  stdlib.ts  tsconfig.json
lang-runners/javascript/lodash/: .gitignore  Makefile  package.json
lang-runners/python/: Cargo.toml  build.rs  stdlib.py
lang-runners/python/.mypy_cache/3.8/: _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  enum.meta.json  io.meta.json  math.meta.json  mmap.meta.json  posix.meta.json  runpy.data.json  runpy.meta.json  stdlib.data.json  stdlib.meta.json  sys.meta.json  types.meta.json  typing.meta.json
lang-runners/python/.mypy_cache/3.8/collections/: __init__.meta.json  abc.meta.json
lang-runners/python/.mypy_cache/3.8/importlib/: __init__.meta.json  abc.meta.json
lang-runners/python/.mypy_cache/3.8/json/: __init__.meta.json  decoder.meta.json  encoder.meta.json
lang-runners/python/.mypy_cache/3.8/os/: __init__.meta.json  path.meta.json
lang-runners/python/src/: main.rs
lang-runners/python/stdlib/: README.md  rumblelib.py  setup.py
langs/: lang-common.rs
langs/javascript/: .gitignore  Makefile  build.sh  jsrunner.c  stdlib.js  testrobot.js
langs/python/: Cargo.toml  robot.py  stdlib.py
langs/python/src/: lib.rs  main.rs
logic/: Cargo.toml
logic/entrypoints/cli/: Cargo.toml
logic/entrypoints/webapp/: Cargo.toml
logic/langs/python/: Cargo.toml
logic/src/: gen_schema.rs  lib.rs  types.rs
runners/cli/: Cargo.toml  robot.py  stdlib.py
runners/cli/src/: main.rs
runners/common/: Cargo.toml
runners/common/src/: lib.rs
runners/lambda/: Cargo.toml  create-zip.sh  deploy.sh  upload-to-localstack.sh
runners/lambda/src/: main.rs
runners/native/: Cargo.toml
runners/native/examples/: native-cli.rs
runners/native/src/: lib.rs
runners/wasi/: Cargo.toml
runners/wasi/src/: lib.rs  stdio.rs
runners/webapp/: Cargo.toml  buildall.sh  package.json
runners/webapp/src/: index.js  lib.rs  pyconvert.rs  wasi.worker.js
src/logic/: Cargo.toml  backend.ml  dune  frontend.ml  json_adapter.ml  logic.atd  logic.ml  logic.opam  types.ml
src/logic/backend/: Cargo.toml  robot.py
src/logic/backend/src/: main.rs
src/logic/frontend/: Cargo.toml
src/logic/frontend/src/: lib.rs  pyconvert.rs  stdlib.rs
src/logic/logic/: Cargo.toml
src/logic/logic/src/: lib.rs  types.rs
src/logic/pyrunner/: Cargo.toml  build.rs  stdlib.py
src/logic/pyrunner/src/: lib.rs  stdlib.rs
src/yente/: .env.example  Cargo.toml
src/yente/src/: main.rs
yente/: Cargo.toml
yente/src/: main.rs
