[profile.release]
lto = true

[workspace]
members = [
    "logic",
    "env-runners/native", "env-runners/browser", "env-runners/lambda", "env-runners/lambda/build-cache",
    "lang-runners/python"
]

[patch.crates-io]
instant = { git = "https://github.com/coolreader18/instant", branch = "fix-wasi" }
