[package]
name = "logic"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>", "Noa <coolreader18@gmail.com>"]
edition = "2018"

[features]
robot-runner-not-send = []

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
serde_with = { version = "1.4.0", default-features = false }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
multimap = "0.8.1"
strum = { version = "0.18.0", features = ["derive"] }
thiserror = "1.0.20"
futures-util = "0.3.5"
async-trait = "0.1.36"
maybe-owned = { version = "0.3", features = ["serde"] }
