[package]
name = "logic"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>", "Noa <coolreader18@gmail.com>"]
edition = "2018"

[features]
robot-runner-not-send = []

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = { version = "3.7.0", default-features = false, features = ["macros"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
multimap = "0.10.0"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.58"
futures-util = "0.3.30"
async-trait = "0.1.78"
maybe-owned = { version = "0.3", features = ["serde"] }
