[package]
name = "browser-runner"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>", "Noah <33094578+coolreader18@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
logic = { path = "../../logic", features = ["robot-runner-not-send"] }
futures-util = "0.3.5"
maplit = "1.0"

wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.13"
js-sys = "0.3.40"

serde = "1.0.114"
serde_json = "1.0.55"

console_error_panic_hook = "0.1.6"
async-trait = "0.1.36"
