[package]
name = "lambda-runner"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>", "Noa <coolreader18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logic = { path = "../../logic" }
# lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
# lambda = { git = "https://github.com/coolreader18/aws-lambda-rust-runtime/", branch = "tokio1" }
lambda = { package = "netlify_lambda", version = "0.2" }
rusoto_core = "0.46.0"
rusoto_sqs = "0.46.0"
serde_json = "1.0.55"
serde = { version = "1.0.114", features = ["derive"] }
serde_with = { version = "1.4.0", features = ["json"] }
tokio = "1.20"
once_cell = "1.4.0"
maplit = "1.0"

wasmer = { version = "1.0", default-features = false, features = ["jit"] }
wasmer-engine = "1.0"
wasi-process = "0.3"
wasmer-wasi = "1.0"
native-runner = { path = "../native" }
# crc32fast = "1.2"
# rand = "0.8"

# https://github.com/sfackler/rust-openssl/issues/980#issuecomment-415757400
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "0.9.58"
tempfile = "3.1.0"
jemallocator = "0.3.2"

brotli = "3.3.0"
base64 = "0.12.3"

sentry = "0.22.0"


[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
