[package]
name = "lambda-runner"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>", "Noa <coolreader18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logic = { path = "../../logic" }
# lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
# lambda = { git = "https://github.com/coolreader18/aws-lambda-rust-runtime/", branch = "tokio1" }
lambda = { package = "netlify_lambda", version = "0.2" }
rusoto_core = "0.48.0"
rusoto_sqs = "0.48.0"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
serde_with = { version = "3.7.0", features = ["json"] }
tokio = "1.36"
once_cell = "1.19.0"
maplit = "1.0"

wasmer = { version = "3", default-features = false }
#wasi-process2 = { path = "../../../wasi-process" }
wasi-process2 = "0.3"
wasmer-wasi = "3"
native-runner = { path = "../native" }
# crc32fast = "1.2"
# rand = "0.8"

# https://github.com/sfackler/rust-openssl/issues/980#issuecomment-415757400
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "0.9.101"
tempfile = "3.10.1"
jemallocator = "0.5.4"

brotli = "3.5.0"
base64 = "0.22.0"

sentry = "0.32.2"


[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
