[package]
name = "native-runner"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>", "Noah <33094578+coolreader18@users.noreply.github.com>"]
edition = "2018"

[dependencies]
logic = { path = "../../logic" }
serde = "1.0.114"
serde_json = "1.0.55"
itertools = "0.9.0"
tokio = { version = "1.0", features = ["macros", "process", "io-util"] }
async-trait = "0.1.36"
