[package]
name = "native-runner"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>", "Noa <coolreader18@gmail.com>"]
edition = "2018"

[dependencies]
logic = { path = "../../logic" }
serde = "1.0.114"
serde_json = "1.0.55"
itertools = "0.9.0"
tokio = { version = "1.20", features = ["macros", "process", "io-util", "time"] }
async-trait = "0.1.36"
