[package]
name = "pyrunner"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>", "Noah <33094578+coolreader18@users.noreply.github.com>"]
edition = "2018"

[dependencies]
logic = { path = "../../logic" }

# default-features = false removes 'threading', which might make single-threaded apps faster? but it's wasm
# which is single-threaded anyway, so who knows
rustpython-vm = { git = "https://github.com/RustPython/RustPython", default-features = false, features = ["compile-parse", "freeze-stdlib"], branch = "coolreader18/no-unimplemented-os" }
rustpython-compiler = { git = "https://github.com/RustPython/RustPython", branch = "coolreader18/no-unimplemented-os" }

serde = "1.0.114"
serde_json = "1.0.55"
once_cell = "1.4.0"
