[package]
name = "pyrunner"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>", "Noa <coolreader18@gmail.com>"]
edition = "2018"

[dependencies]
logic = { path = "../../logic" }

# default-features = false removes 'threading', which might make single-threaded apps faster? but it's wasm
# which is single-threaded anyway, so who knows
rustpython-vm = { git = "https://github.com/RustPython/RustPython", default-features = false, features = ["compiler", "freeze-stdlib", "serde"] }
rustpython-stdlib = { git = "https://github.com/RustPython/RustPython" }
rustpython-pylib = { git = "https://github.com/RustPython/RustPython", features = ["freeze-stdlib"] }
serde = "1.0.114"
serde_json = "1.0.55"
