[package]
name = "pyrunner"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>", "Noah <33094578+coolreader18@users.noreply.github.com>"]
edition = "2018"

[dependencies]
logic = { path = "../../logic" }

rustpython-vm = { git = "https://github.com/RustPython/RustPython", features = ["freeze-stdlib"], branch = "coolreader18/wasm-_thread" }
rustpython-compiler = { git = "https://github.com/RustPython/RustPython", branch = "coolreader18/wasm-_thread" }

serde = "1.0.114"
serde_json = "1.0.55"
once_cell = "1.4.0"
