[package]
name = "lambda"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logic = { path = "../../logic" }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
rusoto_core = "0.43.0"
rusoto_sqs = "0.43.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = "0.2.18"
once_cell = "1.3"
native-runner = { path = "../native" }
wasi-runner = { path = "../wasi" }
wasmer-runtime = "0.16"
wasmer-wasi = "0.16"

# https://github.com/sfackler/rust-openssl/issues/980#issuecomment-415757400
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
