[package]
name = "lambda"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>", "Noah <33094578+coolreader18@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logic = { path = "../../logic" }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
rusoto_core = "0.44.0"
rusoto_sqs = "0.44.0"
serde_json = "1.0.55"
serde = { version = "1.0.114", features = ["derive"] }
serde_with = { version = "1.4.0", features = ["json"] }
tokio = "0.2.21"
once_cell = "1.4.0"
native-runner = { path = "../native" }
wasi-runner = { path = "../wasi" }
wasmer-runtime = "0.17.0"
wasmer-wasi = "0.17.0"

# https://github.com/sfackler/rust-openssl/issues/980#issuecomment-415757400
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "0.9.58"
tempfile = "3.1.0"
jemallocator = "0.3.2"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]

