[package]
name = "native-runner"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>", "Noah <33094578+coolreader18@users.noreply.github.com>"]
edition = "2018"

[dependencies]
logic = { path = "../../logic" }
serde = { version = "1.0" }
serde_json = "1.0"
itertools = "0.9"
tokio = { version = "0.2", features = ["macros", "process", "io-util"] }
async-trait = "0.1"
