[package]
name = "frontend"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
logic = { path = "../../logic", features = ["robot-runner-not-send"] }
futures-util = "0.3"

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

serde = "1.0"
serde_json = "1.0"

console_error_panic_hook = { version = "0.1" }
async-trait = "0.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false # ["-O1"]
