[package]
name = "yente"
version = "0.1.0"
authors = ["Noah <33094578+coolreader18@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "postgres", "macros"] }
dotenv = "0.15"
anyhow = "1.0"
