[package]
name = "frontend"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
logic = { path = "../logic" }

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"

rustpython-vm = { git = "https://github.com/RustPython/RustPython" }
rustpython-parser = { git = "https://github.com/RustPython/RustPython" }
rustpython-compiler = { git = "https://github.com/RustPython/RustPython" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

console_error_panic_hook = { version = "0.1" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false # ["-O1"]
