[package]
name = "logic"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = { git = "https://github.com/rust-random/rand" }
multimap = "0.8"
